[package]
name = "copytrade"
version = "0.1.0"
edition = "2021"
description = "Solaringan is a Solana copy trading bot using Yellowstone gRPC"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
solana-sdk = "~2.1.1"
bs58 = "0.5.1"
log = "0.4.17"
env_logger = "0.11.3"
anyhow = "1.0.62"
futures = "0.3.24"
yellowstone-grpc-client = "5.0.0"
yellowstone-grpc-proto = "5.0.0"
base64 = "0.22.1"
maplit = "1.0.2"
